--- a/TimerPicker.xib
+++ b/TimerPicker.xib
@@ -7,11 +7,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="ACO-QD-11d" customClass="TimerPickerView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="239"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Cco-VQ-8GA">
-                    <rect key="frame" x="0.0" y="10" width="320" height="180"/>
+                    <rect key="frame" x="0.0" y="210" width="600" height="180"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="Y7c-L8-Gql"/>
                     </constraints>
@@ -20,17 +20,12 @@
                     </date>
                     <locale key="locale" localeIdentifier="zh-Hans"/>
                 </datePicker>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yM-aw-6xC">
-                    <rect key="frame" x="282" y="200" width="30" height="30"/>
-                    <state key="normal" title="完成">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="ok:" destination="ACO-QD-11d" eventType="touchUpInside" id="tPx-0j-C43"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ak-zi-gzU">
-                    <rect key="frame" x="8" y="200" width="30" height="30"/>
+                    <rect key="frame" x="8" y="400" width="80" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="JXR-hp-ewd"/>
+                        <constraint firstAttribute="height" constant="40" id="av5-0o-nCi"/>
+                    </constraints>
                     <state key="normal" title="取消">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -38,19 +33,38 @@
                         <action selector="cancle:" destination="ACO-QD-11d" eventType="touchUpInside" id="YF7-vk-3K6"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yM-aw-6xC">
+                    <rect key="frame" x="512" y="400" width="80" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="UYS-Ia-2bx"/>
+                        <constraint firstAttribute="height" constant="40" id="hUX-IP-cSk"/>
+                    </constraints>
+                    <state key="normal" title="完成">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="ok:" destination="ACO-QD-11d" eventType="touchUpInside" id="tPx-0j-C43"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Cco-VQ-8GA" secondAttribute="trailing" id="5CG-Na-Qk3"/>
+                <constraint firstAttribute="centerY" secondItem="Cco-VQ-8GA" secondAttribute="centerY" id="BFa-9o-JxW"/>
                 <constraint firstItem="Cco-VQ-8GA" firstAttribute="top" secondItem="ACO-QD-11d" secondAttribute="top" id="Dr8-G4-jXq"/>
                 <constraint firstItem="5yM-aw-6xC" firstAttribute="top" secondItem="Cco-VQ-8GA" secondAttribute="bottom" id="Iw2-Ld-vlO"/>
                 <constraint firstItem="0Ak-zi-gzU" firstAttribute="leading" secondItem="ACO-QD-11d" secondAttribute="leading" constant="8" id="bF7-bV-WbF"/>
                 <constraint firstAttribute="trailing" secondItem="5yM-aw-6xC" secondAttribute="trailing" constant="8" id="iHx-2m-oZE"/>
+                <constraint firstAttribute="centerX" secondItem="Cco-VQ-8GA" secondAttribute="centerX" id="kr9-44-FjK"/>
                 <constraint firstItem="Cco-VQ-8GA" firstAttribute="leading" secondItem="ACO-QD-11d" secondAttribute="leading" id="tI4-se-ZaV"/>
                 <constraint firstItem="0Ak-zi-gzU" firstAttribute="top" secondItem="Cco-VQ-8GA" secondAttribute="bottom" id="ucX-iV-VOg"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="Dr8-G4-jXq"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="timerPicker" destination="Cco-VQ-8GA" id="PNq-Rt-FTO"/>
             </connections>
